main overflow bug i had some css bug ;D

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,9 @@ html {
 body {
   color: #444444;
   font-family: "Open Sans", sans-serif;
+}
+
+main {
   overflow-x: hidden;
 }
 
